Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-133525

[REG] mac style: merged title bar and content area no longer works

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.9.0 Beta3, 6.9.0 RC, 6.10.0 FF
    • 6.9.0 Beta2
    • QPA
    • None
    • mac arm building intel app
    • macOS
    • bddc01982 (dev), 260276642 (6.9)

      6.8 with "unifiedTitleAndToolBarOnMac" looked good

      6.9 beta 2 does not

      see latest posts here

        For Gerrit Dashboard: QTBUG-133525
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            davecotter David M. Cotter
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes